# core-serde-json

./: Cargo.toml  README.md
src/: lib.rs  slice.rs
src/de/: enum_.rs  map.rs  mod.rs  seq.rs
src/ser/: map.rs  mod.rs  seq.rs  struct_.rs
