[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "James Munns <james.munns@ferrous-systems.com>"]
categories = ["no-std"]
description = "serde-json for no_std programs"
documentation = "https://docs.rs/core-serde-json"
edition = "2018"
keywords = ["serde", "json"]
license = "MIT OR Apache-2.0"
name = "core-serde-json"
readme = "README.md"
repository = "https://github.com/ferrous-systems/core-serde-json"
version = "0.1.0"

[dependencies]
heapless = "0.5.0"

[dependencies.serde]
default-features = false
version = "1.0.80"

[dev-dependencies]
serde_derive = "1.0.80"

[features]
std = ["serde/std"]
